2004-12-03  0.8.1.45  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/resource-table.c, client/gtk/resource-table.h,
	client/gtk/Makefile.am: Added a simple way to add a selection for
	resources in the client.
	* client/gtk/frontend.c: Reenabled the workaround for a Gtk+ bug.
	* client/common/player.c: A leaving player is a normal message, not an
	error message.
	* client/common/client.c, client/gtk/interface.c, server/discard.c,
	server/pregame.c, server/server.h: Fixed reconnect in state DISCARD
	and YOUAREROBBER.
	* client/gtk/discard.c: Using the new resource-table widget, and
	removed deprecated gtk_clist.
	* client/gtk/frontend.h, client/gtk/player.c: Made player_create_icon
	accessible to other source files.
	* client/gtk/gui.c(gui_set_game_params): Initially the map pixmap was
	too small. (Debian bug #284063)

2004-11-28  0.8.1.44  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.h: Fix for the macro that would have bad side effects
	when used in if statements
	* client/common/client.c, server/pregame.c: Enable sending the bank by
	the server
	* client/gtk/gui.c(gui_highlight_chits),
	client/gtk/guimap.c(guimap_highlight_chits): Enable highlighted chits
	when reconnected.
	* client/gtk/monopoly.c(monopoly_create_dlg): Only show one dialog
	when reconnecting.
	* client/common/client.c, client/gtk/guimap.c: Fix for crash when
	reconnecting during RoadBuilding card that was played before a dice
	roll.
	* client/common/develop.c(develop_bought_turn): Development cards can
	be played when reconnected.
	* client/common/client.c, server/pregame.c: Dialog did not show when
	reconnecting when a Year of Plenty card has been played.

2004-11-21  0.8.1.43  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/offline.c(frontend_offline): Game|Connect incorrectly
	available when client is started with a commandline with server and
	port
	* client/gtk/guimap.c(guimap_cursor_move): Crash when leaving the map
	with a cursor active